[project]
name = "pascal_voc"
version = "2.1.9"
authors = [
  { name="Alexander Barmin", email="barmin1@mail.ru" },
]
description = "Tool to work with annotation formats"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/Alek-dr/PascalVOC"
